# precompile

./: Cargo.toml  README.md
precompile/: Cargo.toml
precompile-macro/: Cargo.toml
precompile-macro/src/: lib.rs
precompile-test/: Cargo.toml
precompile-test/src/: lib.rs
precompile/src/: lib.rs
precompile/tests/: precompile.rs
